--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@swimlane/ngx-dnd",
-  "version": "3.2.0",
+  "name": "@mbenbader/ngx-dnd",
+  "version": "3.2.2",
   "description": "Drag and Drop for Angular2 and beyond!",
   "main": "release/index.js",
   "typings": "release/index.d.ts",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/swimlane/ngx-dnd.git"
+    "url": "git+https://github.com/MBenBader/ngx-dnd.git"
   },
   "keywords": [
     "angular2",
@@ -57,9 +57,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/swimlane/ngx-dnd/issues"
+    "url": "https://github.com/MBenBader/ngx-dnd/issues"
   },
-  "homepage": "https://github.com/swimlane/ngx-dnd#readme",
+  "homepage": "https://github.com/MBenBader/ngx-dnd#readme",
   "peerDependencies": {
     "@angular/animations": "^4.4.0 || ^5.0.0",
     "@angular/common": "~4.4.0 || ^5.0.0",
