--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
   },
   "dependencies": {
     "@types/dragula": "^2.1.32",
+    "angular2-uuid": "^1.1.1",
     "dragula": "github:swimlane/dragula#fix-drag-issue",
     "install": "^0.11.0",
     "npm": "^5.8.0"
